--- a/src/loading-bar.css
+++ b/src/loading-bar.css
@@ -58,15 +58,12 @@
   border-radius: 100%;
 }
 
-#loading-bar-spinner {
+.loading-bar-spinner {
   display: block;
-  position: fixed;
   z-index: 10002;
-  top: 10px;
-  left: 10px;
 }
 
-#loading-bar-spinner .spinner-icon {
+.loading-bar-spinner .spinner-icon {
   width: 14px;
   height: 14px;
 
